<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivityActivity">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@android:drawable/ic_menu_camera"
            />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@id/profile_image"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_toEndOf="@id/profile_image"
            android:layout_below="@id/text_view_name"
            android:hint="@string/name"></EditText>

        <TextView
            android:id="@+id/text_view_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_toEndOf="@id/profile_image"
            android:layout_below="@id/name"
            android:text="@string/lastname" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_toEndOf="@id/profile_image"
            android:layout_below="@id/text_view_lastname"
            android:hint="@string/lastname"></EditText>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/lastname"
            android:background="@color/black"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/view"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_below="@id/text_view_email"
            android:hint="@string/email"></EditText>

        <TextView
            android:id="@+id/text_view_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/email"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_below="@id/text_view_phone"
            android:hint="@string/phone"></EditText>

        <TextView
            android:id="@+id/text_view_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_below="@id/phone"
            android:text="@string/address" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:layout_below="@id/text_view_address"
            android:hint="@string/address"></EditText>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8sp"
            android:layout_marginTop="25sp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:text="@string/saveProfile"
            android:layout_below="@id/address"
            />







    </RelativeLayout>

</layout>
