<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        android:layout_marginBottom="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:hint="@string/username"></EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:inputType="textPassword"
        android:layout_marginEnd="16sp"
        android:hint="@string/password"></EditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8sp"
            android:layout_marginTop="25sp"
            android:layout_marginStart="16sp"
            android:layout_marginEnd="16sp"
            android:text="@string/login"
            />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:layout_marginTop="25sp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:text="Registrar"
        />

</LinearLayout>


</layout>